<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/selectTestBackground"
    tools:context="kr.ac.hanyang.morphing.activity.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/username_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/sir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sir"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/practice"
                android:layout_width="@dimen/btn2_width"
                android:layout_height="@dimen/btn2_height"
                android:layout_margin="@dimen/btn2_margin"
                android:background="@drawable/btn2"
                android:padding="@dimen/btn2_padding"
                android:text="@string/practice"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/btn2_textSize"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mainTrial1"
                android:layout_width="@dimen/btn2_width"
                android:layout_height="@dimen/btn2_height"
                android:layout_margin="@dimen/btn2_margin"
                android:background="@drawable/btn2"
                android:padding="@dimen/btn2_padding"
                android:text="@string/mainTrial1"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/btn2_textSize"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mainTrial2"
                android:layout_width="@dimen/btn2_width"
                android:layout_height="@dimen/btn2_height"
                android:layout_margin="@dimen/btn2_margin"
                android:background="@drawable/btn2"
                android:padding="@dimen/btn2_padding"
                android:text="@string/mainTrial2"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/btn2_textSize"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
